cmake_minimum_required(VERSION 3.17)
project(simulations)

set(CMAKE_CXX_STANDARD 20)

# ################################################################# #
#                                Engine                             #
# ################################################################# #
add_subdirectory(engine)


# ################################################################# #
#                        Engine Test (Sandbox)                      #
# ################################################################# #
add_subdirectory(sandbox)

# ################################################################# #
#                            Projects                               #
# ################################################################# #
add_subdirectory(projects)